# polymorphic-vm

./: .gitignore  CMakeLists.txt  README.md
includes/: .povm.h.kate-swp  cdt.h  datum-pair.h  datum.h  datum_compare.h  main.h  povm-gen.h  povm-info.h  povm-stack-interface.h  povm-stack.h  povm.h  result.h  run-vm.h
md/: povm-cdt.md  povm-datum.md
src/: datum-casts.c  datum-pair.c  datum.c  datum_compare.c  datum_math.c  datum_op_equals.c  main.c  povm-gen.c  povm-info.c  povm-stack.c  povm-test.c  povm.c  result.c  run-vm.c
src/test/: povm-test-add.c  povm-test-bxor.c  povm-test-call.c  povm-test-cmp.c  povm-test-dup.c  povm-test-run-vm.c  povm-test.c
